# MinimizationHeatTemplates

./: AAAAAAAAAAAA.py  FilesProcessing.py  HeatOrEnvFiles.py  Minimize  README.md  commands.py  copy_file.py  normalized_path.py  normalized_rel_path.py  requirements.txt  setup.cfg
files_processing/: FilesProcessing.py  commands.py  flatlist.py  normalized_rel_path.py  type_checker.py
