[metadata]
name = MinimizationHeatTemplates
description_file = README.md
author = ArpineAramyan
author_email = arpyashaa@gmail.com
classifier =
    Environment :: ISP RAS
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options.entry_points]
console_scripts =
    Minimized = FilesProcessing:main